test_files/fails/s_free_function_in_inner_recursive.ar
let map = \f ->
    let rec run = \(x :: xs) ->
        f x :: delay(run (adv xs)) in
    run;

console <- 1 :: never;
